--- a/space_x_app/pubspec.yaml
+++ b/space_x_app/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   expandable_text: ^2.3.0
 
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -56,7 +57,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
+  mockito: ^5.2.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
